--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     </header>
 
     <main>
+      <h2>Amazeriffic will change your life!</h2>
+      <p>Because it's a new way to be able to organize your tasks. To the point
+         where everyday you'll say, "Oh my gosh! I don't know what my life was
+	 like without this!"</p>
+
+      <h3>Here's why you need Amazeriffic:</h3>
+      <ul>
+        <li>It fits your lifestyle</li>
+	<li>It's awesome</li>
+	<li>It rocks your world</li>
+      </ul>
+
+      <img src="lightbulb.png" alt="an image of a lightbulb">
     </main>
 
     <footer>
