--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
     </main>
 
     <footer>
+      <div class = "contact">
+        <h5>Contact Us</h5>
+	<p>Amazeriffic!</p>
+	<p>55 Fiftieth Street</p>
+	<p>Mountain View, CA 94043</p>
+      </div>
+
+      <div class="sitemap">
+        <h5>Sitemap</h5>
+	<ul>
+	  <li><a href="#">Home</a></li>
+	  <li><a href="#">About Us</a></li>
+	  <li><a href="#">Privacy</a></li>
+	  <li><a href="#">Support</a></li>
+	  <li><a href="#">FAQ</a></li>
+	  <li><a href="#">Careers</a></li>
+	</ul>
+      </div>
     </footer>
   </body>
 </html>
