removed paragraphs from within ordered list.

--- a/faq.html
+++ b/faq.html
@@ -18,13 +18,14 @@
 
     <main>
       <ol>
-        <li>How does Amazeriffic make my day better?</li>
-	<p>By making your life easier.</p>
-	<li>What do I do if I'm having issues accessing my to-do list?</li>
-	<p>Contact support at support@amazeriffic.com.</p>
-	<li>How do I add an item to my to-do list?</li>
-	<p>Click on the + button within an existing list or <a href="#">create a
-	   new list</a>
+        <li>How does Amazeriffic make my day better?
+	By making your life easier.</li>
+	<li>What do I do if I'm having issues accessing my to-do list?
+	Contact support at support@amazeriffic.com.</li>
+	<li>How do I add an item to my to-do list?
+	Click on the + button within an existing list or <a href="#">create a
+	   new list</a></li>
+      </ol>	   
     </main>
 
     <footer>
@@ -44,7 +45,6 @@
 	  <li><a href="#">Support</a>
 	  <li><a href="#">Careers</a>
 	</ul>
-      </div>
-    </footer>  
+      </div>  
     </footer>
-
+</html>
