added div to seperate out answers

--- a/faq.html
+++ b/faq.html
@@ -19,12 +19,12 @@
     <main>
       <ol>
         <li>How does Amazeriffic make my day better?
-	By making your life easier.</li>
+	<div>By making your life easier.</div></li>
 	<li>What do I do if I'm having issues accessing my to-do list?
-	Contact support at support@amazeriffic.com.</li>
+	<div>Contact support at support@amazeriffic.com.</div></li>
 	<li>How do I add an item to my to-do list?
-	Click on the + button within an existing list or <a href="#">create a
-	   new list</a></li>
+	<div>Click on the + button within an existing list or <a href="#">create
+	     a new list</a></div></li>
       </ol>	   
     </main>
 
