creating divs for header, main and footer

--- a/index.html
+++ b/index.html
@@ -8,36 +8,42 @@
 
   <body>
     <header>
-      <h1>Amazeriffic</h1>
-      <nav>
-       <a href="#">Sign Up! </a> |
-       <a href="faq.html">FAQ</a> |
-       <a href="#">Support</a>
-      </nav> 
+      <div class="container">
+        <h1>Amazeriffic</h1>
+        <nav>
+          <a href="#">Sign Up! </a> |
+          <a href="faq.html">FAQ</a> |
+          <a href="#">Support</a>
+        </nav> 
+      </div> 
     </header>
 
     <main>
-      <h2>Amazeriffic will change your life!</h2>
-      <p>Because it's a new way to be able to organize your tasks. To the point
-         where everyday you'll say, "Oh my gosh! I don't know what my life was
-	 like without this!"</p>
+      <div class="container">
+        <h2>Amazeriffic will change your life!</h2>
+        <p>Because it's a new way to be able to organize your tasks. To the poi
+	   t where everyday you'll say, "Oh my gosh! I don't know what my life 
+	   as like without this!"</p>
 
-      <h3>Here's why you need Amazeriffic:</h3>
-      <ul>
-        <li>It fits your lifestyle</li>
-	<li>It's awesome</li>
-	<li>It rocks your world</li>
-      </ul>
+        <h3>Here's why you need Amazeriffic:</h3>
+        <ul>
+          <li>It fits your lifestyle</li>
+	  <li>It's awesome</li>
+	  <li>It rocks your world</li>
+        </ul>
 
-      <img src="lightbulb.png" alt="an image of a lightbulb">
+        <img src="lightbulb.png" alt="an image of a lightbulb">
+      </div>
     </main>
-
+   
     <footer>
-      <div class = "contact">
+      <div class="container">
+      <div class="contact">
         <h5>Contact Us</h5>
 	<p>Amazeriffic!</p>
 	<p>55 Fiftieth Street</p>
 	<p>Mountain View, CA 94043</p>
+      </div>
       </div>
 
       <div class="sitemap">
