edits to css layout

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <main>
       <div class="container">
+        <div class="maintext">
         <h2>Amazeriffic will change your life!</h2>
-        <p>Because it's a new way to be able to organize your tasks. To the poi
-	   t where everyday you'll say, "Oh my gosh! I don't know what my life 
+        <p>Because it's a new way to be able to organize your tasks. To the point where everyday you'll say, "Oh my gosh! I don't know what my life 
 	   as like without this!"</p>
 
         <h3>Here's why you need Amazeriffic:</h3>
@@ -31,8 +31,11 @@
 	  <li>It's awesome</li>
 	  <li>It rocks your world</li>
         </ul>
+	</div>
 
+        <div class="lightbulb"> 
         <img src="lightbulb.png" alt="an image of a lightbulb">
+	</div>
       </div>
     </main>
    
@@ -44,17 +47,21 @@
 	<p>55 Fiftieth Street</p>
 	<p>Mountain View, CA 94043</p>
       </div>
-      </div>
 
       <div class="sitemap">
         <h5>Sitemap</h5>
 	<ul>
+	  <div class="sitemap1">
 	  <li><a href="#">About Us</a></li>
 	  <li><a href="#">Privacy</a></li>
 	  <li><a href="#">Support</a></li>
+	  </div>
+	  <div class="sitemap2">
 	  <li><a href="faq.html">FAQ</a></li>
 	  <li><a href="#">Careers</a></li>
+	  </div>
 	</ul>
+      </div>
       </div>
     </footer>
   </body>
