--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Amazeriffic</title>
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans"
+     rel="stylesheet" type="text/css">
+     <link href="https://fonts.googleapis.com/css?family=Ubuntu"
+     rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
@@ -9,7 +13,7 @@
   <body>
     <header>
       <div class="container">
-        <h1>Amazeriffic</h1>
+        <h1>Amazeriffic!</h1>
         <nav>
           <a href="#">Sign Up! </a> |
           <a href="faq.html">FAQ</a> |
@@ -42,25 +46,23 @@
     <footer>
       <div class="container">
       <div class="contact">
-        <h5>Contact Us</h5>
+        <h4>Contact Us</h4>
 	<p>Amazeriffic!</p>
 	<p>55 Fiftieth Street</p>
 	<p>Mountain View, CA 94043</p>
       </div>
 
       <div class="sitemap">
-        <h5>Sitemap</h5>
-	<ul>
-	  <div class="sitemap1">
+        <h4>Sitemap</h4>
+	  <ul class="sitemap1">
 	  <li><a href="#">About Us</a></li>
 	  <li><a href="#">Privacy</a></li>
 	  <li><a href="#">Support</a></li>
-	  </div>
-	  <div class="sitemap2">
+	  </ul>
+	  <ul class="sitemap2">
 	  <li><a href="faq.html">FAQ</a></li>
 	  <li><a href="#">Careers</a></li>
-	  </div>
-	</ul>
+	  </ul>
       </div>
       </div>
     </footer>
