--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="maintext">
         <h2>Amazeriffic will change your life!</h2>
-        <p>Because it's a new way to be able to organize your tasks. To the point where everyday you'll say, "Oh my gosh! I don't know what my life 
+        <p class="info">Because it's a new way to be able to organize your tasks. To the point where everyday you'll say, "Oh my gosh! I don't know what my life 
 	   as like without this!"</p>
 
         <h3>Here's why you need Amazeriffic:</h3>
@@ -47,7 +47,7 @@
       <div class="container">
       <div class="contact">
         <h4>Contact Us</h4>
-	<p>Amazeriffic!</p>
+	<p style="font-style: italic">Amazeriffic!</p>
 	<p>55 Fiftieth Street</p>
 	<p>Mountain View, CA 94043</p>
       </div>
