styling links and adding font colors

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="container">
       <div class="contact">
         <h4>Contact Us</h4>
-	<p style="font-style: italic">Amazeriffic!</p>
+	<p style="font-style: italic; color: red">Amazeriffic!</p>
 	<p>55 Fiftieth Street</p>
 	<p>Mountain View, CA 94043</p>
       </div>
