--- a/faq.html
+++ b/faq.html
@@ -2,42 +2,54 @@
 <html>
   <head>
     <title>Amazeriffic FAQ</title>
+     <link href="https://fonts.googleapis.com/css?family=Droid+Sans"
+     rel="stylesheet" type="text/css">
+     <link href="https://fonts.googleapis.com/css?family=Ubuntu"
+     rel="stylesheet" type="text/css">
+    <link href="reset.css" rel="stylesheet" type="text/css">
+    <link href="faq_style.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <header>
+      <div class="container">
       <h1>Amazeriffic FAQ!</h1>
-      <p>Helping you find answers to all of your Amazeriffic questions.</p>
-
       <nav>
         <a href="index.html">Home</a> |
-	<a href="#">Sign Up!</a> |
-	<a href="#">Support</a>
+        <a href="#">Sign Up!</a> |
+        <a href="#">Support</a>
       </nav>
+
+      <h2>Helping you find answers to all of your Amazeriffic questions.</h2>
+
+      </div>
     </header>
 
     <main>
+      <div class="container">
       <ol>
         <li>How does Amazeriffic make my day better?
-	<div>By making your life easier.</div></li>
+	<div class="answer">By making your life easier.</div></li>
 	<li>What do I do if I'm having issues accessing my to-do list?
-	<div>Contact support at support@amazeriffic.com.</div></li>
+	<div class="answer">Contact support at support@amazeriffic.com.</div></li>
 	<li>How do I add an item to my to-do list?
-	<div>Click on the + button within an existing list or <a href="#">create
+	<div class="answer">Click on the + button within an existing list or <a href="#">create
 	     a new list</a></div></li>
-      </ol>	   
+      </ol>
+      </div>
     </main>
 
     <footer>
+      <div class="container">
       <div class="contact">
-        <h5>Contact Us!</h5>
+        <h3>Contact Us!</h3>
         <p>Amazeriffic!</p>
         <p>555 Fiftieth Street</p>
         <p>Mountain View,CA 94043</p>
       </div>
 
       <div class="sitemap">
-        <h5>Sitemap</h5>
+        <h3>Sitemap</h3>
 	<ul>
 	  <li><a href="index.html">Home</a>
 	  <li><a href="#">About Us</a>
@@ -45,6 +57,7 @@
 	  <li><a href="#">Support</a>
 	  <li><a href="#">Careers</a>
 	</ul>
-      </div>  
+      </div>
+      </div>
     </footer>
 </html>
