--- a/faq.html
+++ b/faq.html
@@ -43,17 +43,19 @@
       <div class="container">
       <div class="contact">
         <h3>Contact Us!</h3>
-        <p>Amazeriffic!</p>
+        <p style= font-style: italics; color:red>Amazeriffic!</p>
         <p>555 Fiftieth Street</p>
         <p>Mountain View,CA 94043</p>
       </div>
 
       <div class="sitemap">
         <h3>Sitemap</h3>
-	<ul>
+	<ul class="sitemap1">
 	  <li><a href="index.html">Home</a>
 	  <li><a href="#">About Us</a>
 	  <li><a href="#">Privacy</a>
+        </ul>
+        <ul class="sitemap2">
 	  <li><a href="#">Support</a>
 	  <li><a href="#">Careers</a>
 	</ul>
