final tweaks to faq style

--- a/faq.html
+++ b/faq.html
@@ -42,8 +42,8 @@
     <footer>
       <div class="container">
       <div class="contact">
-        <h3>Contact Us!</h3>
-        <p style= font-style: italics; color:red>Amazeriffic!</p>
+        <h3>Contact Us</h3>
+        <p style= "font-style: italic; color:red">Amazeriffic!</p>
         <p>555 Fiftieth Street</p>
         <p>Mountain View,CA 94043</p>
       </div>
