--- a/todo.html
+++ b/todo.html
@@ -24,23 +24,21 @@
 
     <main>
       <div class="container">
-        <div class="maintext">
-        <h2>Amazeriffic will change your life!</h2>
-        <p class="info">Because it's a new way to be able to organize your tasks. To the point where everyday you'll say, "Oh my gosh! I don't know what my life 
-	   as like without this!"</p>
-
-        <h3>Here's why you need Amazeriffic:</h3>
-        <ul>
-          <li>It fits your lifestyle</li>
-	  <li>It's awesome</li>
-	  <li>It rocks your world</li>
-        </ul>
-	</div>
-
-        <div class="lightbulb"> 
-        <img src="lightbulb.png" alt="an image of a lightbulb">
-	</div>
-      </div>
+        <div class="tabs">
+	  <a href="#"><span class="active">Newest</span></a>
+	  <a href="#"><span>Oldest</span></a>
+	  <a href="#"><span>Add</span></a>
+        </div>
+        <div class="content">
+          <ul>
+	    <li>Get Grodceries</li>
+	    <li>Eat vegetables</li>
+	    <li>Hang out with Jane</li>
+	    <li>Do a little dance</li>
+	    <li>Blow bubbles</li>
+	  <ul>
+        </div>
+      </div>	
     </main>
    
     <footer>
