updating tab styles and fixing typo in list

--- a/todo.html
+++ b/todo.html
@@ -31,7 +31,7 @@
         </div>
         <div class="content">
           <ul>
-	    <li>Get Grodceries</li>
+	    <li>Get Groceries</li>
 	    <li>Eat vegetables</li>
 	    <li>Hang out with Jane</li>
 	    <li>Do a little dance</li>
